--- a/app/lib/elements/state.jade
+++ b/app/lib/elements/state.jade
@@ -1,5 +1,5 @@
-<polymer-element name="sr-state" attributes="name url templateUrl template onActive">
-  <script>
+polymer-element(name="sr-state", \attributes="name url templateUrl template onActive")
+  script
     Polymer('sr-state', {
       name: '',
       url: '',
@@ -180,5 +180,3 @@
         return doc;
       }
     });
-  </script>
-</polymer-element>
