--- a/app/lib/elements/state.jade
+++ b/app/lib/elements/state.jade
@@ -155,7 +155,7 @@ polymer-element(name="sr-state", \attributes="name url templateUrl template onAc
 
       receiveAjaxResponse: function (response, xhr) {
         var status = (xhr.status || 0);
-        if (status >= 200 && status < 300) {
+        if (typeof xhr.responseText === 'string') {
           return this.html2dom(xhr.responseText);
         }
         this.fire('sr-error', {response: response, xhr: xhr});
@@ -163,14 +163,32 @@ polymer-element(name="sr-state", \attributes="name url templateUrl template onAc
       },
 
       html2dom: function (html) {
-        var doc
+        return this.useDOMParser(html)
+          || this.useImplementation(html)
+          || this.useActiveX(html);
+      },
+
+      useDOMParser: function (html) {
+        var doc;
         if (window.DOMParser) {
           var parser = new DOMParser();
           doc = parser.parseFromString(html, 'text/html');
-        } else if (document.implementation && document.implementation.createDocument) {
+        }
+        return doc;
+      },
+
+      useImplementation: function (html) {
+        var doc;
+        if (document.implementation && document.implementation.createDocument) {
           doc = document.implementation.createHTMLDocument();
           doc.documentElement.innerHTML = html;
-        } else {
+        }
+        return doc;
+      },
+      
+      useActiveX: function (html) {
+        var doc;
+        if (window.ActiveXObject) {
           doc = new ActiveXObject('Microsoft.XMLDOM');
           try {
             doc.async = 'false';
