let state element support elementName attribute

--- a/app/lib/elements/ajax.jade
+++ b/app/lib/elements/ajax.jade
@@ -1,13 +1,13 @@
 // https://github.com/Polymer/polymer-elements/blob/cc82113898a8639754df311b1d96d75528d28ebd/polymer-ajax/polymer-xhr.html
 polymer-element(name="sr-xhr")
   template
-    style
+    style.
       @host {
         * {
           display: none;
         }
       }
-  script
+  script.
     Polymer('sr-xhr', {
       request: function (options) {
         options = options || {};
