--- a/app/lib/elements/history.jade
+++ b/app/lib/elements/history.jade
@@ -1,12 +1,12 @@
 polymer-element(name="sr-history", \attributes="root html5mode hashPrefix")
   template
-    style
+    style.
       @host {
         * {
           display: none;
         }
       }
-  script
+  script.
     Polymer('sr-history', {
       root: '/',
       html5mode: true,
