--- a/app/lib/elements/state.jade
+++ b/app/lib/elements/state.jade
@@ -1,4 +1,4 @@
-polymer-element(name="sr-state", \attributes="name url templateUrl template onActive elementName")
+polymer-element(name="sr-state", \attributes="name url templateUrl template elementName")
   script.
     Polymer('sr-state', {
       name: '',
@@ -6,7 +6,6 @@ polymer-element(name="sr-state", \attributes="name url templateUrl template onAc
       template: null,
       templateUrl: null,
       elementName: null,
-      onActive: null,
 
       __info: null,
       __parentState: null,
